--- a/Assignment-1/ass1.tex
+++ b/Assignment-1/ass1.tex
@@ -593,7 +593,7 @@ res = minimize(OF, ig, method='SLSQP', bounds=bound, constraints=constraints)
         $$
   \item Blend 1 capacity
         $$
-          \sum_{j=1}^{3} Q_{1j} \le 5000
+          \sum_{j=1}^{3} Q_{1j} \ge 5000
         $$
   \item Restrictions
         \begin{align}
