add-github-link

--- a/Assignment-2/Report/ass2.tex
+++ b/Assignment-2/Report/ass2.tex
@@ -116,6 +116,11 @@ Solution from BFGS: [ 0. -0.] and Solution from GA: [0.01887624 0.95234389]
 \end{verbatim}
 (Results may vary with different parameters)
 
+\section{Code Availability}
+
+The code for the BFGS and Genetic Algorithm implementations, including tests on the Bohachevsky and Ackley functions, is available on GitHub at:  
+\url{https://github.com/airwarriorg91/Optimization-Techniques/tree/main/Assignment-2}
+
 \section{Conclusion}
 
 The BFGS algorithm is effective for smooth, unimodal functions like the Bohachevsky function, achieving convergence with relatively few iterations. The Genetic Algorithm, with elitism-based selection, SBX, and normally disturbed mutation, provides robust performance across both unimodal and multimodal functions, particularly with the challenging Ackley function. These results demonstrate the complementary strengths of BFGS and GA in solving diverse optimization problems.
